<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    android:background="@drawable/bg"
    tools:context=".SignUpPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/signup"
                android:textColor="@color/thirdColor"
                android:textAllCaps="true"
                android:textSize="@dimen/_25ssp"
                android:letterSpacing=".1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:letterSpacing=".1"
                android:text="@string/create_your_account_in_obs_learn"
                android:textAllCaps="false"
                android:textColor="@color/thirdColor"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/first_name"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_person_24"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="#BC5D5D"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/last_name"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_person_24"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:helperText="Required"
                app:helperTextTextColor="#BC5D5D"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="Section"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/book_copy_18"
                android:layout_width="match_parent"
                app:helperText="Required*"
                app:helperTextTextColor="#BC5D5D"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/sectionCTV"
                    android:fontFamily="@font/poppins"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/email"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_email_24"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:helperTextEnabled="true"
                app:helperText="Provide your real email account."
                app:helperTextTextColor="#BC5D5D"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/password"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_vpn_key_24"
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:helperText="Password must at least 6 digit."
                app:helperTextTextColor="#BC5D5D"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/signup"
                android:textColor="@color/primary_white"
                android:textSize="@dimen/_11ssp"
                android:padding="@dimen/_10sdp"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                app:cornerRadius="@dimen/_5sdp"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="#252525"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/thirdColor"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>