<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="screen"
    android:gravity="center"
    tools:context=".LoginPage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login"
                android:textColor="@color/thirdColor"
                android:textAllCaps="true"
                android:textSize="@dimen/_25ssp"
                android:letterSpacing=".1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:letterSpacing=".1"
                android:text="@string/login_to_your_existing_account"
                android:textAllCaps="false"
                android:textColor="@color/thirdColor"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/email"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_email_24"
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:hint="@string/password"
                app:hintTextColor="#2E2E2E"
                android:textColorHint="#2E2E2E"
                app:startIconDrawable="@drawable/baseline_vpn_key_24"
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                app:boxStrokeColor="@color/thirdColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/thirdColor"
                app:endIconTint="@color/thirdColor"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/forgotPasswordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#BC5D5D"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/poppins"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login"
                android:textColor="@color/primary_white"
                app:iconGravity="textStart"
                app:icon="@drawable/baseline_login_24"
                app:iconTint="@color/primary_white"
                android:textSize="@dimen/_11ssp"
                android:padding="@dimen/_10sdp"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_22sdp"
                app:cornerRadius="@dimen/_5sdp"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/thirdColor"
                    android:orientation="vertical"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:letterSpacing=".1"
                    android:text="@string/or"
                    android:textAllCaps="false"
                    android:textColor="@color/thirdColor"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/thirdColor"
                    android:orientation="vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/googleLoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Login with google"
                    android:textColor="@color/primary_white"
                    app:iconGravity="textStart"
                    app:icon="@drawable/google"
                    app:iconTint="@color/primary_white"
                    android:textSize="@dimen/_11ssp"
                    android:padding="@dimen/_10sdp"
                    android:paddingStart="@dimen/_22sdp"
                    android:paddingEnd="@dimen/_22sdp"
                    app:cornerRadius="@dimen/_5sdp"/>

<!--                <com.google.android.material.button.MaterialButton-->
<!--                    android:id="@+id/twitterLoginBtn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/poppins_medium"-->
<!--                    android:text="Login with twitter"-->
<!--                    android:textColor="@color/primary_white"-->
<!--                    app:iconGravity="textStart"-->
<!--                    app:icon="@drawable/twitter"-->
<!--                    app:iconTint="@color/primary_white"-->
<!--                    android:textSize="@dimen/_11ssp"-->
<!--                    android:padding="@dimen/_10sdp"-->
<!--                    android:paddingStart="@dimen/_22sdp"-->
<!--                    android:paddingEnd="@dimen/_22sdp"-->
<!--                    app:cornerRadius="@dimen/_5sdp"/>-->

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#252525"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/poppins"/>

                <TextView
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_btn"
                    android:textColor="@color/thirdColor"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>